5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1644_2703.log
== TEST (2019-04-11 17:03:53) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		print ("eleitor")
else:
		print ("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 17:04:07) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		print ("eleitor")
else:
		print ("nao_eleitor")
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 17:04:19) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		print ("eleitor")
else:
		print ("nao_eleitor")
-- EXECUTION TIME:
0.142638
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:32:49) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		mensagem = "Eleitor"
else:
		mensagem = "Nao_Eleitor"
		
print (lower.mensagem())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    print (lower.mensagem())
NameError: name 'lower' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 17:33:16) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		mensagem = "Eleitor"
else:
		mensagem = "Nao_Eleitor"
		
print (mensagem.lower())
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 17:33:31) 
-- CODE:
idade = int

idade = int(input("Informe a idade: "))

if idade >= 18:
		mensagem = "Eleitor"
else:
		mensagem = "Nao_Eleitor"
		
print (mensagem.lower())
-- EXECUTION TIME:
0.123512
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 18:59:17) 
-- CODE:
idade = int(input("Informe a idade: "))

if idade >= 18:
		mensagem = "Eleitor"
else:
		mensagem = "Nao_Eleitor"
		
print (mensagem.lower())
-- EXECUTION TIME:
0.112833
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
